# asm-interpreter

./: .gitignore  README.md  build_latest.sh  detect_latest.sh  detect_latest_pr.ml  detect_latest_pr.sh  dune-project  exam.md  find_clones.py  tasks.md
.github/: CODEOWNERS  add_comment.ml  jscpd.template.md  make_doc_msg.sh
C/: .ocamlformat  C.opam  README.md  dune  dune-project
C/demos/: demoBinarySearch.ml  demoFact.ml  demoFact.t  dune  parsingTests.t
C/lib/: Pprintast.ml  Pprintast.mli  ast.ml  dune  parser.ml
CSharpExceptions/: CSharpExceptions.opam  README.md  dune  dune-project
CSharpExceptions/lib/: ast.ml  dune  pars_tests.ml  pars_tests.mli  parser.ml  parser.mli
CSharpOOP/: dune  dune-project
Cypher/: .ocamlformat  Cypher.opam  LICENSE  README.md  dune-project
Cypher/lib/: ast.ml  dune  parser.ml  test.ml
DRozhkov/: DRozhkov.opam  README.md  dune-project
DRozhkov/demos/: demo_fact.ml  dune  test.t
DRozhkov/lib/: ast.ml  dune  parser.ml
DSyresenkov/: DSyresenkov.opam  README.md  dune  dune-project
DSyresenkov/demos/: demoFact.ml  demoFact.t  dune
DSyresenkov/lib/: ast.ml  dune  parser.ml  parser.mli  tests.ml
FSharpActivePatterns/: FSharpActivePatterns.opam  README.md  dune-project
FSharpActivePatterns/lib/: ast.ml  dune  parser.ml  parser.mli
FSharpUnitsOfMeasure/: FSharpUnitsOfMeasure.opam  README.md  dune  dune-project
FSharpUnitsOfMeasure/lib/: ast.ml  dune  parser.ml
Go/: Lambda.opam  dune-project
Haskell/: .gitignore  Haskell.opam  README.md  dune-project
Haskell/demos/: dune  haskellParser.ml  haskellParser.t
Haskell/lib/: ast.ml  dune  parser.ml  tests.ml
LLVM_IR/: .gitignore  LLVM_IR.opam  LLVM_IR.opam.template  README.md  dune-project
LLVM_IR/demos/: demoInterpret.ml  demoParse.ml  dune  interpretTests.t  parsingTests.t
LLVM_IR/demos/attachments/: fac.ll  fac_arg.ll  simple_ssa_fail.ll  sum_args.ll  test.ll  triangle_square.ll  vec_sum_args.ll
LLVM_IR/lib/: ast.ml  dune  main.ml  main.mli  parser.ml  parser.mli
LLVM_IR/lib/afterParseCheck/: dune  ssaCheck.ml  ssaCheck.mli  test.ml  test.mli
LLVM_IR/lib/ast/: ast.ml  dune
LLVM_IR/lib/common/: dune  irInts.ml  irInts.mli  stateMonad.ml  stateMonad.mli
LLVM_IR/lib/interpreter/: dune  interpreting.ml  interpreting.mli  memory.ml  memory.mli  serialisation.ml  serialisation.mli  state.ml  state.mli
LLVM_IR/lib/interpreter/instructions/: aggregate.ml  aggregate.mli  binary.ml  binary.mli  bitwise.ml  bitwise.mli  commonInterpInstructions.ml  commonInterpInstructions.mli  conversion.ml  conversion.mli  dune  memoryAddress.ml  memoryAddress.mli  other.ml  other.mli  terminator.ml  terminator.mli  unary.ml  unary.mli  vector.ml  vector.mli
LLVM_IR/lib/parser/: commonParser.ml  commonParser.mli  dune  instructions.ml  instructions.mli  parsing.ml  parsing.mli  types.ml  types.mli  values.ml  values.mli
Lambda/: .gitignore  Lambda.opam  dune-project
Lambda/demos/: demoAO.ml  demoNO.ml  dune  interpretTests.t  parsingTests.t
Menhir/: Lambda.opam  README.md  dune-project
OCaml+PolymorphicVariants/: OCaml+PolymorphicVariants.opam  dune-project
OCaml+PolymorphicVariants/demos/: demoParse.ml  demoParse.t  dune
OCaml+PolymorphicVariants/lib/: ast.ml  dune  parser.ml
OCamlPrintf/: dune-project
OCamlTyEff/: OCamlTyEff.opam  README.md  dune  dune-project
OCamlWithEffects/: Makefile  OCamlWithEffects.opam  README.md  dune  dune-project
OCamlWithEffects/demos/: demoFact.ml  demoFact.t  dune
OCamlWithEffects/lib/: ast.ml  dune  parser.ml
OCaml_BidirectionalRecords/: .gitignore  OCaml_BidirectionalRecords.opam  dune-project
OCaml_BidirectionalRecords/lib/: ast.ml  dune  parser.ml  tests.ml
OCaml_ExtensibleVariantTypes/: OCaml_ExtensibleVariantTypes.opam  REPL.ml  dune  dune-project  repl.t
OCaml_ExtensibleVariantTypes/demos/: dune  parsingTests.t
OCaml_ExtensibleVariantTypes/lib/: ast.ml  dune  parser.ml  tests.ml
Ocaml+ADT/: .gitignore  Ocaml+ADT.opam  README.md  dune-project
Ocaml+ADT/demos/: demoFact.ml  demoFact.t  dune
Ocaml+ADT/lib/: ast.ml  dune  parser.ml
Ocaml+printf/: .gitignore  Ocaml+printf.opam  OcamlPrintf.opam  dune-project
Ocaml+printf/demos/: demoInfer.ml  demoInfer.t  demoInterpreter.ml  demoInterpreter.t  demoParse.ml  demoParse.t  dune
Ocaml+printf/lib/: ast.ml  dune  infer_tests.ml  inferencer.ml  inferencer.mli  interpret_tests.ml  interpreter.ml  interpreter.mli  parser.ml  parser.mli  parser_tests.ml  parser_tests.mli  pprint.ml  pprint.mli  tests.ml  typedtree.ml  typedtree.mli
Ocaml+printf/lib/tests/: infer_tests.ml  interpret_tests.ml  parser_tests.ml
OcamlOOP/: README.md  (+2 more)
Parallel_execution_simulation/: Parallel_execution_simulation.opam  README.md  dune-project
Parallel_execution_simulation/demos/: demoParser.ml  dune
Parallel_execution_simulation/lib/: ast.ml  dune  parser.ml  parser.mli
PrologDatalog/: PrologDatalog.opam  README.md  dune-project
PrologDatalog/lib/: ast.ml  dune  parser.ml  parser.mli
Python/: Python.opam  README.md  REPL.ml  dune  dune-project
Python/demos/: demoAO.ml  demoParse.ml  demo_fact.ml  dune  interpreter_test.ml  test.t
Python/lib/: ast.ml  dune  interpreter.ml  interpreter.mli  parser.ml  parser.mli  tests.ml  tests.mli
Ruby/: README.md  REPL.ml  Ruby.opam  dune  dune-project
Ruby/demos/: demoParser.ml  demoParser.t  dune
Ruby/examples/: facfib.rb  fibonacci.rb
Ruby/lib/: ast.ml  dune  interpret.mli  parser.ml
asm/: README.md  asm.opam  dune-project  repl.t
asm/demos/: demoParser.ml  demoParser.t  dune
asm/lib/: ast.ml  dune  parser.ml
asm/lib/ast/: ast.ml  dune
asm/lib/interpreter/: containers.mli  dune  interpreter.ml  interpreter.mli  state.ml  state.mli
asm/lib/parser/: common.ml  common.mli  directive.ml  directive.mli  dune  immediate.ml  immediate.mli  operand.ml  operand.mli  parser.ml  parser.mli  register.ml  register.mli  statement.ml
mini-SQL/: README.md  REPL.ml  dune  dune-project  mini-SQL.opam
mini-SQL/demos/: demoAO.ml  demoNO.ml  demoParse.ml  dune  parsingTests.t
mini-SQL/lib/: ast.ml  dune  parser.ml  test.ml
(+48 files in other folders)
