(lang dune 3.7)

(name Cypher)

(generate_opam_files true)

(cram enable)

(license MIT)

(authors "Arseniy Baytenov")

(maintainers "Arseniy Baytenov")

(bug_reports "https://github.com/Arsene-Baitenov/fp2023/issues")

(homepage "https://github.com/Arsene-Baitenov/fp2023")

(package
 (name Cypher)
 (synopsis "Cypher")
 (description "Cypher interpreter")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)))
