(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Efim Perevalov")

(maintainers "Efim Perevalov")

(bug_reports "https://github.com/Urtix/fp2023/issues")

(homepage "https://github.com/Urtix/fp2023")

(package
 (name FSharpUnitsOfMeasure) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for Fsharp")
 (description
  "Support for Units of Measure")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
