(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Efremov Alexey")

(maintainers "Efremov Alexey")

(bug_reports "https://github.com/Kakadu/fp2023/issues")

(homepage "https://github.com/Kakadu/fp2023/tree/master/LLVM_IR")

(package
 (name LLVM_IR) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for LLVM Intermediate Representation")
 (description
  "An interpreter for LLVM Intermediate Representation with interesting features, also known as bugs")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
