(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Ksenia Melashenko")

(maintainers "Ksenia Melashenko")

(bug_reports "https://github.com/ksenmel/fp2023/issues")

(homepage "https://github.com/ksenmel/fp2023")

(package
 (name OCaml_BidirectionalRecords) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "OCaml with bidirectional records")
 (description
  "Ocaml implementation with bidirectional records support")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  (odoc :with-doc)
  (ocamlformat :build)
  angstrom
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
