(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Kirill Shishin")

(maintainers "Kirill Shishin")

(bug_reports "https://github.com/tepa46/fp2023/issues")

(homepage "https://github.com/tepa46/fp2023")

(package
 (name Ocaml+ADT) ;
 (synopsis "Ocaml with ADT")
 (description "Ocaml implementation with ADT support")
 (version 0.1)
 (depends
  dune
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  (odoc :with-doc)
  (ocamlformat :build)
  angstrom
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
