(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Anna Ermolovich")

(maintainers "Anna Ermolovich")

(bug_reports "https://github.com/Anna-er/fp2023")

(homepage "https://github.com/Anna-er/fp2023")

(package
 (name Ruby)
 (synopsis "FIXME An interpreter for language")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  ppx_variants_conv
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
