(lang dune 3.7)

(generate_opam_files true)

(license LGPL-3.0-or-later)

(authors "Vadim Yakshigulov")

(maintainers "https://github.com/toadharvard")

(bug_reports "https://github.com/toadharvard/asm-interpreter/issues")

(homepage "https://github.com/toadharvard/asm-interpreter")

(package
 (name asm)
 (synopsis "NASM assembly interpeter")
 (description
  "Something is supported... but in december...")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  ppx_variants_conv
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  base
 ))
