(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Zaytsev Dmitriy")

(maintainers "Zaytsev Dmitriy")

(bug_reports "https://github.com/d-zaytsev/fp2023")

(homepage "https://github.com/d-zaytsev/fp2023")

(package
 (name mini-SQL)
 (synopsis "An interpreter for SQL")
 (description
  "Mini-SQL interpreter. Language includes keywords: SELECT, JOIN, WHERE.")
 (version 1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  ppx_variants_conv
  (odoc :with-doc)
  (ocamlformat :build)))
