(library
 (name csharp_Exc_Lib)
 (public_name CSharpExceptions.Lib)
 (modules Ast Parser)
 (libraries base angstrom str)
 (preprocess
  (pps ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx)))

(library
 (name pars_tests)
 (modules pars_tests)
 (libraries csharp_Exc_Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_inline_test))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
