(library
 (name miniml_lib)
 (public_name DSyresenkov.Lib)
 (modules Ast Parser)
 (libraries base angstrom)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx))
  (inline_tests))

(library
 (name tests)
 (modules tests)
 (libraries miniml_lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
